--- a/src/Calculator/App.xaml
+++ b/src/Calculator/App.xaml
@@ -1,4 +1,4 @@
-<Application x:Class="CalculatorApp.App"
+﻿<Application x:Class="CalculatorApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:Controls="using:CalculatorApp.Controls"
@@ -221,7 +221,7 @@
             <Style x:Key="NumericButtonStyle24"
                    BasedOn="{StaticResource NumericButtonStyle}"
                    TargetType="Controls:CalculatorButton">
-                <Setter Property="FontSize" Value="24"/>
+                <Setter Property="FontSize" Value="20"/>
             </Style>
             <Style x:Key="NumericButtonStyle28"
                    BasedOn="{StaticResource NumericButtonStyle}"
