--- a/src/Calculator/App.xaml
+++ b/src/Calculator/App.xaml
@@ -29,6 +29,7 @@
                     <RevealBackgroundBrush x:Key="AppControlPressedButtonFaceBrush" Color="#30FFFFFF"/>
                     <SolidColorBrush x:Key="AppControlTransparentAccentColorBrush" Color="{ThemeResource SystemAccentColor}"/>
                     <SolidColorBrush x:Key="AppControlPageTextBaseHighColorBrush" Color="{StaticResource SystemBaseHighColor}"/>
+
                     <SolidColorBrush x:Key="AppControlPageTextRedColorBrush" Color="Red"/>
                     <RevealBorderBrush x:Key="AppControlForegroundTransparentRevealBorderBrush"
                                        FallbackColor="Transparent"
@@ -239,6 +240,13 @@
                 <Setter Property="FontSize" Value="46"/>
             </Style>
 
+            <Style x:Key="SymbolOperatorKeypadButtonStyle"
+                   BasedOn="{StaticResource NumericButtonStyle}"
+                   TargetType="Controls:CalculatorButton">
+                <Setter Property="FontFamily" Value="{StaticResource CalculatorFontFamily}"/>
+                <Setter Property="FontSize" Value="{StaticResource CalcOperatorCaptionSize}"/>
+            </Style>
+
             <Style x:Key="OperatorButtonStyle"
                    BasedOn="{StaticResource CalcButtonStyle}"
                    TargetType="Controls:CalculatorButton">
@@ -330,6 +338,16 @@
                 <Setter Property="HoverForeground" Value="{ThemeResource SystemControlHighlightAltAltHighBrush}"/>
                 <Setter Property="PressBackground" Value="{ThemeResource AppControlHighlightAltListAccentHighRevealBackgroundBrush}"/>
                 <Setter Property="PressForeground" Value="{ThemeResource SystemControlHighlightAltAltHighBrush}"/>
+            </Style>
+
+            <Style x:Key="AccentEmphasizedCalcButtonStyle"
+                   BasedOn="{StaticResource SymbolOperatorButtonStyle}"
+                   TargetType="Controls:CalculatorButton">
+                <Setter Property="HoverBackground" Value="{ThemeResource SystemControlHighlightAccentRevealBackgroundBrush}"/>
+                <Setter Property="HoverForeground" Value="{ThemeResource SystemControlHighlightAltAltHighBrush}"/>
+                <Setter Property="PressBackground" Value="{ThemeResource AppControlHighlightAltListAccentHighRevealBackgroundBrush}"/>
+                <Setter Property="PressForeground" Value="{ThemeResource SystemControlHighlightAltAltHighBrush}"/>
+                <Setter Property="Background" Value="{ThemeResource SystemAccentColorLight1}"/>
             </Style>
 
             <!-- RESULTS -->
