--- a/src/Calculator/Views/CalculatorProgrammerRadixOperators.xaml
+++ b/src/Calculator/Views/CalculatorProgrammerRadixOperators.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CalculatorApp.CalculatorProgrammerRadixOperators"
+﻿<UserControl x:Class="CalculatorApp.CalculatorProgrammerRadixOperators"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:common="using:CalculatorApp.Common"
